--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🚀 Advanced Word Cloud Generator</h1>
+            <h1>Simens wordcloud generator</h1>
             <p>Create stunning, interactive word clouds with animations, particle effects, and multiple export options!</p>
         </header>
         
