--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>Simens wordcloud generator</h1>
-            <p>Create stunning, interactive word clouds with animations, particle effects, and multiple export options!</p>
+            <p>Create stunning, Yes word clouds with animations, particle effects, and multiple export options!</p>
         </header>
         
         <div class="input-section">
