--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                     <input type="range" id="rotation" min="0" max="90" value="0">
                     <span id="rotationValue">0°</span>
                 </div>
+
+                <div class="control-group">
+                    <label for="wordSpacing">Word Spacing:</label>
+                    <input type="range" id="wordSpacing" min="0" max="40" value="10">
+                    <span id="wordSpacingValue">10px</span>
+                </div>
                 
                 <div class="control-group">
                     <label for="opacity">Opacity:</label>
