--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h1>POSTEN NORGE // TERMINAL V.2.1 (LEGACY)</h1>
             </div>
             <div class="user-status">
-                <div>OPERATØR: ODDBJØRN H.</div>
+                <div>OPERATØR: Emil H.</div>
                 <div>STATUS: <span class="alert-blink">KRITISK / FASTLÅST</span></div>
                 <div>KJØRETØY: VW CADDY 4MOTION</div>
             </div>
@@ -129,7 +129,7 @@
                     SYSTEMMELDING: "Det ser ut til at du står fast. AI-systemet har varslet redningstjenesten basert på din posisjon."
                 </p>
                 <p style="color: var(--text-alert); font-weight: bold;">
-                    >> ODDBJØRN'S LOGG: "Jeg hater denne greia. Den overvåker meg. Og nå er det den eneste som vet hvor jeg er."
+                    >> Emil'S LOGG: "Jeg hater denne greia. Den overvåker meg. Og nå er det den eneste som vet hvor jeg er."
                 </p>
             </div>
 
